@startuml
class Kandidat {
    String vorname
    String nachname
    String namensZusatz
    String titel
    char geschlecht
    Date geburtsjahr
    String geburtsort
    String beruf
}

class Bundesland {
    Strind landId
    String name
    boolean osten
    Image wappen
}

class Partei {
    String name
    String kuerzel
    boolean nationaleMinderheit
    int gruendungsjahr
    String farbe
    Image logo
}

class Bundestagswahl{
   Date tag
   int nummer
}

class Landesliste {
    int stimmzettelPosition
}

class Listenplatz {
    int position
}

class Wahlkreis {
    int nummer
    String name
    int deutscheBevoelkerung
}

class Gemeinde {
    int plz
    String name
    String zusatz
}

class ZweitstimmenErgebnis {
    int anzahl
}

class Stimme {
    boolean gueltig
}

class Zweitstimme extends Stimme {
}

class Erststimme extends Stimme {
}

class Direktkandidatur {
    int anzahlStimmen
}

Landesliste "*" -- "1" Bundesland : in >
Landesliste "*" -- "1" Partei : < reicht ein
Landesliste "*" -- "1" Bundestagswahl: zur >

Landesliste "1" *-- "1..*" Listenplatz : enthaelt >
Listenplatz "*" -- "1" Kandidat : enthaelt >

Wahlkreis "1..*" --* "1" Bundesland : besteht aus <
Wahlkreis "1" *-right- "1..*" Gemeinde : besteht aus >
Wahlkreis "299" -- "1" Bundestagswahl: gueltig fuer >
Gemeinde "1" -- "0..*" Kandidat: wohnt in <
Direktkandidatur "*" -- "1" Kandidat : von >
Direktkandidatur "*" -- "1" Wahlkreis : < hat
Direktkandidatur "*" -- "0..1" Partei : von >
Direktkandidatur "*" -- "1" Bundestagswahl: zur >

Erststimme "*" -- "0..1" Direktkandidatur : fuer >
Zweitstimme "*" -- "0..1" Landesliste : fuer >
Stimme "*" -up- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -left- "1" Wahlkreis : stammt aus >
ZweitstimmenErgebnis "*" -- "1" Landesliste : fuer >
@enduml